# Vivid

./: .gitignore
backend/: .env.example  Cargo.toml
backend/src/: config.rs  lib.rs  main.rs  telemetry.rs
backend/src/api/: characters.rs  checkpoint.rs  dashboard.rs  events.rs  graph.rs  mod.rs  search.rs  simulation.rs  tags.rs  timeline.rs  world.rs  ws.rs
backend/src/council/: analyst.rs  architect.rs  assessor.rs  auditor.rs  context_builder.rs  mod.rs  summarizer.rs
backend/src/engine/: cascade_engine.rs  emergent_detector.rs  event_memory.rs  mod.rs  narrative_filter.rs  probability_tree.rs  simulation_loop.rs  storyteller.rs  tags.rs  timeline.rs  world_state.rs
backend/src/llm/: chain.rs  gateway.rs  mod.rs
backend/src/llm/optimizer/: l0_priority_budgeting.rs  l10_generational_cache.rs  l11_semantic_dedup.rs  l12_deadline_aware.rs  l13_priority_queue.rs  l14_compression.rs  l15_fallback_chain.rs  l16_circuit_breaker_v2.rs  l17_council_optimizer.rs  l1_prompt_caching.rs  l2_semaphore_plus.rs  l3_adaptive_token_limit.rs  l4_deduplication.rs  l5_frequency_control.rs  l6_neural_cache.rs  l7_similarity_router.rs  l8_preemptive_synthesis.rs  l9_batching_router.rs  mod.rs
backend/src/models/: chaos.rs  character.rs  economics.rs  event.rs  mod.rs  relationship.rs  social.rs  timeline.rs  world.rs
backend/src/storage/: checkpoint.rs
backend/tests/: api_tests.rs  engine_tests.rs  mod.rs
backend/tests/models/: chaos_tests.rs  economics_tests.rs  mod.rs  social_tests.rs  test_vectors.rs
backend/tests/scenarios/: engine_scenarios.rs  mod.rs
(+73 files in other folders)
