[package]
name = "vivid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1"
petgraph = "0.7"
hecs = "0.11"
bhava = "2.0"
redb = "4.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
minijinja = "2"
governor = "0.10"
tokio-retry = "0.3"
dotenvy = "0.15"
futures = "0.3"
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
pin-project = "1"

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
